# autobank

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  plan.md
crates/autobank-server/: Cargo.toml
crates/autobank-server/src/: demo.rs  main.rs
crates/autobank-server/src/api/: accounts.rs  audit.rs  demo.rs  executions.rs  health.rs  mod.rs  rules.rs  system.rs
crates/autobank-server/src/audit/: mod.rs
crates/autobank-server/src/db/: migrations.rs  mod.rs  repository.rs
crates/autobank-server/src/rules/: condition.rs  engine.rs  mod.rs  types.rs
crates/autobank-server/src/scheduler/: mod.rs
crates/autobank-server/tests/: rule_engine_test.rs
crates/sb1-api/: Cargo.toml
crates/sb1-api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  mock.rs
crates/sb1-api/src/models/: mod.rs  token.rs  transactions.rs
crates/sb1-api/tests/: client_test.rs  models_test.rs
http/: client.http  test.http
src/: api.rs  auth.rs  config.rs  fileio.rs  main.rs  ui.rs
src/models/: accounts.rs  mod.rs  token.rs  transactions.rs  transfers.rs
web/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.css
web/src/lib/api/: client.ts  index.ts  types.ts
web/src/lib/components/accounts/: AccountCard.svelte  AccountList.svelte  AccountSelect.svelte
web/src/lib/components/audit/: AuditLog.svelte
web/src/lib/components/common/: ConfirmDialog.svelte  StatusBadge.svelte  TimeAgo.svelte
web/src/lib/components/executions/: ExecutionList.svelte
web/src/lib/components/rules/: RuleBuilder.svelte  RuleCard.svelte  RuleList.svelte
web/src/lib/components/transactions/: TransactionTable.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/accounts/: +page.svelte
web/src/routes/accounts/[key]/: +page.svelte
web/src/routes/audit/: +page.svelte
web/src/routes/demo/: +page.svelte
web/src/routes/executions/: +page.svelte
web/src/routes/rules/: +page.svelte
web/src/routes/rules/[id]/: +page.svelte
web/src/routes/rules/new/: +page.svelte
web/src/routes/settings/: +page.svelte
