[workspace]
resolver = "2"
members = [
    "crates/sb1-api",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Sverre Johann Bjørke <sverrejb@gmail.com>"]
repository = "https://github.com/sverrejb/autobank"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Logging/tracing
tracing = "0.1"

# File paths
dirs = "6.0"

# Date/time
chrono = "0.4"

# Testing
wiremock = "0.6"
tokio-test = "0.4"
