[workspace]
resolver = "2"
members = [
    "crates/sb1-api",
    "crates/autobank-server",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Sverre Johann Bjørke <sverrejb@gmail.com>"]
repository = "https://github.com/sverrejb/autobank"

[workspace.dependencies]
# Local crates
sb1-api = { path = "crates/sb1-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File paths
dirs = "6.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
wiremock = "0.6"
tokio-test = "0.4"
