[package]
name = "autobank-server"
version = "0.1.0"
description = "Autobank - Rule-based banking automation server"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sb1-api.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
uuid.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
