[package]
name = "sb1-api"
version = "0.1.0"
description = "SpareBank 1 API client library"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
urlencoding.workspace = true
tracing.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
